feat: Deletando comentários

--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -109,6 +109,10 @@
   background: var(--green-300);
 }
 
+.commentForm button[type=submit]:disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
+}
 
 .commentList {
   margin-top: 2rem;
